--- a/index.html
+++ b/index.html
@@ -9,15 +9,20 @@
 
 	<body>
 		<div class="header">
-			<h1>JManagement Services</h1>
+			<h1>JManagement Services</h1><br>
+			Your Security, Our Responsibility
 		</div>
     
     		<nav>
         		<ul>
-           			<li><a href="#home">Home</a></li>
+           			<li><a href="#info">Info</a></li>
             			<li><a href="#contact">Contact</a></li>
         		</ul>
 		</nav>
+		<section id="info">
+			<p>We are a management service provider dedicated to helping you succeed. Feel free to explore and learn more at our <a href="https://discord.gg/pBpAzCMMwJ">Discord</a></p>
+		</section>
+		
     
     		<section id="contact">
         		<h2>Contact</h2>
