--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         		</ul>
 		</nav>
 		<section id="info">
-			<p>We are a management service provider dedicated to helping you succeed. Feel free to explore and learn more at our <a href="https://discord.gg/pBpAzCMMwJ">Discord</a></p>
+			<p>We are a management service provider dedicated to helping you succeed. Feel free to explore and learn more at our <a href="https://discord.gg/pBpAzCMMwJ" target="_blank">Discord</a></p>
 		</section>
 		
     
