--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         		<h2>Contact</h2>
         		<p>Here is our contact information:</p>
             		<p>Email: <a href="mailto:jackalbmanage@gmail.com">jackalbmanage@gmail.com</a></p>
-            		<p>Phone: +27 69 191 8688</p>
+            		<p>Phone: <a href="https://wa.me/+27 96 191 8688">+27 69 191 8688</a></p>
     		</section>
 
     		<div class="footer">
