--- a/index.html
+++ b/index.html
@@ -19,11 +19,12 @@
             			<li><a href="#contact">Contact</a></li>
         		</ul>
 		</nav>
+		
 		<section id="info">
+			<h2>Info</h2>
 			<p>We are a management service provider dedicated to helping you succeed. Feel free to explore and learn more at our <a href="https://discord.gg/pBpAzCMMwJ" target="_blank">Discord</a></p>
 		</section>
 		
-    
     		<section id="contact">
         		<h2>Contact</h2>
         		<p>Here is our contact information:</p>
