--- a/index.html
+++ b/index.html
@@ -28,8 +28,10 @@
     		<section id="contact">
         		<h2>Contact</h2>
         		<p>Here is our contact information:</p>
-            		<p>Email: <a href="mailto:jackalbmanage@gmail.com">jackalbmanage@gmail.com</a></p>
-            		<p>Phone: <a href="https://wa.me/+27 69 191 8688?text=I'm%20interested%20in%20your%20management%20services">+27 69 191 8688</a></p>
+			<address>
+            			<p>Email: <a href="mailto:jackalbmanage@gmail.com">jackalbmanage@gmail.com</a></p>
+            			<p>Phone: <a href="https://wa.me/+27 69 191 8688?text=I'm%20interested%20in%20your%20management%20services">+27 69 191 8688</a></p>
+			</address>
     		</section>
 
     		<div class="footer">
