--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
         		<p>Here is our contact information:</p>
 			<address>
 			<font size="5">
-            			<p> <a href="mailto:jackalbmanage@gmail.com"> <img src="gmailicon.png" width="20pt" height="20pt"></a>Email: jackalbmanage@gmail.com</p>
-            			<p> <a href="https://wa.me/+27 69 191 8688?text=I'm%20interested%20in%20your%20management%20services"><img src="whatsappicon.png" width="20pt" height="20pt"></a>Phone: +27 69 191 8688</p>
+            			<p> <a href="mailto:jackalbmanage@gmail.com"> <img src="gmailicon.png" width="1.6%" height="1.6%"></a>Email: jackalbmanage@gmail.com</p>
+            			<p> <a href="https://wa.me/+27 69 191 8688?text=I'm%20interested%20in%20your%20management%20services"><img src="whatsappicon.png" width="1.6%" height="1.6%"></a>Phone: +27 69 191 8688</p>
 			</font>
 			</address>
     		</section>
