--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 			<address>
 			<font size="5">
             			<p> <img src="gmailicon.png" width="2%" height="2%"> Email: <a href="mailto:jackalbmanage@gmail.com">jackalbmanage@gmail.com</a></p>
-            			<p> <img src="whatsappicon.png" width="2%" height="2%">Phone: <a href="https://wa.me/+27 69 191 8688?text=I'm%20interested%20in%20your%20management%20services">+27 69 191 8688</a></p>
+            			<p> <img src="whatsappicon.png" width="2%" height="2%">Phone: <a href="https://wa.me/+27 69 191 8688?text=I'm%20interested%20in%20your%20management%20services" target="_blank">+27 69 191 8688</a></p>
 			</font>
 			</address>
     		</section>
