--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>JManagement Services</title>
+		<link rel="icon" type="image/x-icon" href="businessicon.png">
 		<link rel="stylesheet" href="main.css">
 
 	</head>
