--- a/index.html
+++ b/index.html
@@ -9,29 +9,30 @@
 	</head>
 
 	<body>
-		<div class="header">
-			<h1>JManagement Services</h1><br>
-			Your Security, Our Responsibility
-		</div>
+		<font face="Verdana">
+			<div class="header">
+				<h1>JManagement Services</h1><br>
+				Your Security, Our Responsibility
+			</div>
     
     		<nav>
         		<ul>
            			<li><a href="#info">Info</a></li>
             			<li><a href="#contact">Contact</a></li>
         		</ul>
-		</nav>
+			</nav>
 		
-		<section id="info">
-			<h2>Info</h2>
-			<p>We are a management service provider dedicated to helping you succeed. Feel free to explore and learn more at our <a href="https://discord.gg/pBpAzCMMwJ" target="_blank">Discord</a></p>
-		</section>
+			<section id="info">
+				<h2>Info</h2>
+				<p>We are a management service provider dedicated to helping you succeed. Feel free to explore and learn more at our <a href="https://discord.gg/pBpAzCMMwJ" target="_blank">Discord</a></p>
+			</section>
 		
     		<section id="contact">
         		<h2>Contact</h2>
         		<p>Here is our contact information:</p>
 			<address>
 			<font size="5">
-            			<p> <img src="gmailicon.png" width="2%" height="2%"> Email: <a href="mailto:help@mikepservices.co.za">help@mikepservices.co.za</a></p>
+            			<p> <img src="gmailicon.png" width="2%" height="2%"> Email: <a href="mailto:jackalbmanage@gmail.com">jackalbmanage@gmail.com</a></p>
             			<p> <img src="whatsappicon.png" width="2%" height="2%">Phone: <a href="https://wa.me/+27691918688?text=I'm%20interested%20in%20your%20management%20services" target="_blank">+27 69 191 8688</a></p>
 			</font>
 			</address>
@@ -40,5 +41,6 @@
     		<div class="footer">
         	<p>&copy; 2023 JManagement Services</p>
     		</div>
+		</font>
 	</body>
 </html>
