--- a/services.html
+++ b/services.html
@@ -22,7 +22,7 @@
 			</div>
 		
 			<div class="navbar">
-				<a href="home.html">Home</a>
+				<a href="index.html">Home</a>
 				<a class="active" href="services.html">Services</a>
 				<a href="contact.html">Contact</a>
 			</div>
