--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
 			</div>
 		
 			<div class="navbar">
-				<a href="home.html">Home</a>
+				<a href="index.html">Home</a>
 				<a href="services.html">Services</a>
 				<a class="active" href="contact.html">Contact</a>
 			</div>
